# goldwheel-fastapi

./: LICENSE  README.md  docker-compose.yml  prestart.py  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  recipe.py
app/clients/: reddit.py
app/core/: auth.py  config.py
app/crud/: base.py  crud_recipe.py  crud_user.py
app/db/: base.py  base_class.py  init_db.py  session.py
app/models/: recipe.py  user.py
app/schemas/: __init__.py  recipe.py
app/templates/: index.html
