[tool.poetry]
name = "goldwheel-fastapi"
version = "0.1.0"
description = ""
authors = ["yudong Zhu <yudong8.zhu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.12.0"
tenacity = "^8.2.3"
httpx = "^0.25.0"
psycopg2-binary = "^2.9.9"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
pydantic = {extras = ["email"], version = "^2.4.2"}
pydantic-settings = "^2.0.3"
uvicorn = "^0.23.2"
fastapi = "^0.103.2"
sqlalchemy = "^2.0.22"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
